results/SVCOMP/conversational/log-instanceof5-2024_03_13_18_56_56.txt
/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof5
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result <==> !(o instanceof String);
  public static boolean f() {
    Object o = new Object();
    return !(o instanceof String);
  }
}
;
/home/max/Documents/JMLGPT/tmp/instanceof5.java:10: error: cannot find symbol
  //@ ensures \result <==> !(o instanceof String);
                             ^
  symbol:   variable o
  location: class Main
1 error

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof5
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result <==> !(new Object() instanceof String);
  public static boolean f() {
    Object o = new Object();
    return !(o instanceof String);
  }
}
;
/home/max/Documents/JMLGPT/tmp/instanceof5.java:10: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> !(new Object() instanceof String);
                             ^
1 error

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof5
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures \result <==> true;
  public static boolean f() {
    Object o = new Object();
    return !(o instanceof String);
  }
}
;

